# Stepik-courses

./: .gitignore  3.5_output_sys.py  README.md  api_test.py  pyproject.toml
Intro DS/: part1_.ipynb
Ml course/: feature engineering.ipynb
Statistic/: second_part.ipynb
certificats/: urls.md
data/: dataset_3363_2.txt  dataset_3363_4.txt  imputing_missing_values
notebooks/: bioinformatik_python.ipynb  bioinformatik_python_p2.ipynb  statisctic.ipynb
python_basics_and_use/: basic_principles_part1.ipynb
